# resize

./: .gitignore  Cargo.toml  README.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/gui/: Cargo.toml
crates/gui/src/: main.rs
crates/resize/: Cargo.toml
crates/resize/src/: lib.rs
src/: lib.rs  main.rs
