[package]
name = "resize"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.12", features = ["derive"] }
eframe = "0.18.0"
image = "0.24.2"
indicatif = "0.16.2"
rayon = "1.5.3"
rfd = "0.9.1"
