[package]
name = "resize-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
resize = { path = "../resize" }
clap = { version = "3.2.12", features = ["derive"] }
image = "0.24.2"
indicatif = "0.16.2"
